--- a/report/report.tex
+++ b/report/report.tex
@@ -7,6 +7,7 @@
 \usetikzlibrary{automata, positioning, arrows}
 \usepackage{booktabs}
 \usepackage{tablefootnote}
+\usepackage{adjustbox}
 
 
 \setlength\parindent{24pt}
@@ -206,26 +207,51 @@ The first property investigated was the door close property. First off, to make 
 
 To add support for multiple lift, the \texttt{FOREACH} Larva keyword was used to iterate over lift objects. All the event methods resided in the class \textit{Lift.java}. This meant that adding multiple lift support was done by binding the Lift object in the event declarations and then assigning it to the \texttt{FOREACH} object using the \texttt{WHERE} keyword.
 
-\begin{adjustbox}{max width=\textwidth}
 
 \begin{lstlisting}[
 language=bash, 
 caption={Multiple lift support for LiftOpenProperty}
 \label{lst:labelname}
 ]
-setMoving(isMoving) = {Lift l.setMoving(boolean isMoving)} WHERE {lift = l;} %%goUp/goDown
-closeDoors() = {Lift l.closeDoors()} WHERE {lift = l;}					%% closeDoor
-openDoors() = {Lift l.openDoors()} WHERE {lift = l;}					%% openDoor
-setFloor() = {Lift l.setFloor(*)} WHERE {lift = l;}						%% stop
+setMoving(isMoving) = {Lift l.setMoving(boolean isMoving)} WHERE {lift = l;} 
+closeDoors() = {Lift l.closeDoors()} WHERE {lift = l;}
+openDoors() = {Lift l.openDoors()} WHERE {lift = l;}
+setFloor() = {Lift l.setFloor(*)} WHERE {lift = l;}
 \end{lstlisting}
-
-\end{adjustbox}
-
-
 
 The second property is called \texttt{StartMovingTimeProperty} and verifies that the lift start moving in less than 3 seconds after the door closes following a request. A new event was added for the summon request action. The method that corresponds to this event is \texttt{callLiftToFloor}. \\
 
-This method provided some difficulty when switching to adding support for multiple lift verification. The reason being that this method does not reside in the \textit{Lift.java} class. 
+This method provided some difficulty when switching to adding support for multiple lift verification. The reason being that this method does not reside in the \textit{Lift.java} class. It resided in the \textit{JavaController.java} class. When \texttt{callLiftToFloor} is called, it performs some calculations and then proceeds to execute \texttt{moveLift} with the chosen lift. To find out which lift was called via Larva, the source needed to be edited. The change done was very minimal and does not impact the design of the lift system at all. The \texttt{callLiftToFloor} method signature was changed to return a lift object instead of void. This is then used by Larva by making use of the \texttt{uponReturning} keyword when declaring the event. The whole event declaration is as follows: \newline\texttt{callLiftToFloor(Lift l) = {LiftController lc.callLiftToFloor(*)uponReturning(l)} where {lift = l;}}, where '\texttt{lift}' is the iterated object declared in the FOREACH loop. 
+
+\subsection{Testing}
+In the tests shown, one property at a time was tested to make the outputs more legible. Figure \ref{fig:lift-open-test-passed} shows the property \texttt{LiftOpenTimeProperty} running as should. several buttons were pressed and the lift always moved as specified. \\
+
+\begin{figure}[h]
+   \centering
+   \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{images/lift-open-test-passed} % requires the graphicx package
+   \caption{\texttt{LiftOpenTimeProperty} verified}
+   \label{fig:lift-open-test-passed}
+\end{figure}
+
+For the second test shown in figure \ref{fig:lift-open-test-failed}, time taken to close the door automatically was changed from the java source code in file \textit{Shaft.java}. The figure shows that verification failed because the door was closing after 3 seconds.
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{images/lift-open-test-failed} % requires the graphicx package
+   \caption{\texttt{LiftOpenTimeProperty} failed}
+   \label{fig:lift-open-test-failed}
+\end{figure}
+
+Referirng to figure \ref{fig:lift-open-test-multiple} the third test shown, displays the verification being conducted on several (three) lifts. Identifiers are used to differentiate the multiple lifts being verified. 
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{images/lift-open-test-multiple} % requires the graphicx package
+   \caption{\texttt{LiftOpenTimeProperty} on several lifts}
+   \label{fig:lift-open-test-multiple}
+\end{figure}
+
+
 
 \section{Model-Based Testing}
 
